--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -5,7 +5,7 @@
 <ul>
     @foreach (var item in Model)
     {
-       <li>@item.Description</li>
-       <a asp-action="delete" asp-route-id="item.Id"Delete></a>
+       <li>@item.Description  <a asp-action="delete" asp-route-id="item.Id"Delete></a</li>
+      >
    }
 </ul>
