--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -1,10 +1,13 @@
-﻿@model List<WishList.Models.Item>
+﻿
+@model List<WishList.Models.Item>
 
 <h1>Wishlist</h1>
-<a asp-acton="create">Add Item</a>
+
+<a asp-action="create">Add item</a>
+
 <ul>
     @foreach (var item in Model)
     {
-       <li>@item.Description<a asp-action="delete" asp-route-id="@item.Id">Delete</a></li>
+        <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
     }
 </ul>
